# railway-multi-target-recognition

./: .gitignore  AGENTS.md  Agent.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements-gpu.txt
backend/app/: __init__.py  main.py
backend/app/api/: ai.py  annotations.py  assets.py  export.py  image_tasks.py  images.py  labels.py  tasks.py  vision.py
backend/app/core/: __init__.py  config.py  dependencies.py
backend/app/models/: __init__.py  schemas.py
backend/app/repositories/: json_store.py  postgres_store.py
backend/app/services/: export_service.py  inference_service.py  storage_service.py  task_service.py  task_worker.py  vision_service.py
backend/scripts/: export_tensorrt.py
backend/tests/: test_smoke.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  App.vue  api.ts  styles.css
scripts/: dev-backend.sh  dev-frontend.sh  smoke.sh
