[project]
name = "railway-recognition-backend"
version = "0.1.0"
description = "FastAPI backend for railway multi-target recognition and annotation review."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "pillow>=10.4.0",
    "opencv-python-headless>=4.10.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.36",
    "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
